riscv-rt/tests/ui/external_interrupt/fail_arguments.stderr
error: `#[external_interrupt]` function must have signature `[unsafe] fn() [-> !]`
  --> tests/ui/external_interrupt/fail_arguments.rs:29:1
   |
29 | fn my_interrupt(code: usize) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
